Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-121485

QLocale method nativeCountryName returns wrong values.

XMLWordPrintable

    • All
    • 8
    • 904f1d3b1 (dev), f4f35fe84 (dev), 063026cc5 (dev), 41c786781 (6.7), 4f88c3e3a (6.6), 86f1db459 (tqtc/lts-6.5)
    • Foundation Sprint 100

      There is a problem with some country codes and the related native names.

      when using: 

      QLocale(QLocale::AnyLanguage, QLocale::codeToTerritory(QString("US")));
      QLocale(QLocale::AnyLanguage, QLocale::codeToTerritory(QString("GB")));

      the country stored in the QLocale object is correctly set to UnitedStates and UnitedKingdom but when I am trying to get nativeCountryName() it prints me something like that:

      for US: "ᏌᏊ ᎢᏳᎾᎵᏍᏔᏅ ᏍᎦᏚᎩ"
      for GB: "Rywvaneth Unys"

      When I changed the country code from US to USA and GB to GBR, then USA works correctly, but GBR is recognized as QLocale::UnitedStates instead QLocale::UnitedKingdom.

       

       

       

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Eddy Edward Welbourne
            kamilhajdukiewicz Kamil Hajdukiewicz
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes