src/corelib/text/qlocale.h
@@ -382,6 +382,9 @@ public:
         Ligurian = 338,
         Rohingya = 339,
         Torwali = 340,
+        Anii = 341,
+        Kangri = 342,
+        Venetian = 343,
 
         Afan = Oromo,
         Bengali = Bangla,
@@ -403,7 +406,7 @@ public:
         Uigur = Uyghur,
         Walamo = Wolaytta,
 
-        LastLanguage = Torwali
+        LastLanguage = Venetian
     };
 
     enum Script : ushort {
